# evolution-data-server

./: .gitignore
src/calendar/backends/taskwarrior/: CMakeLists.txt  e-cal-backend-taskwarrior.h
src/camel/: camel-block-file.c  camel-data-wrapper.c  camel-data-wrapper.h  camel-folder-search.c  camel-folder-summary.c  camel-folder-summary.h  camel-folder-thread.c  camel-folder.c  camel-folder.h  camel-message-info.c  camel-mime-message.c  camel-mime-part-utils.c  camel-mime-part-utils.h  camel-mime-part.c  camel-search-private.c  camel-sexp.c  camel-store-summary.c  camel-store.c  camel-stream-fs.c  camel-vee-folder.c  camel-vee-summary.c  camel-vtrash-folder.c
src/camel/providers/imapx/: camel-imapx-folder.c  camel-imapx-search.c  camel-imapx-server.c  camel-imapx-summary.c
src/camel/providers/local/: camel-local-summary.c  camel-maildir-summary.c  camel-mbox-folder.c  camel-mbox-summary.c
src/camel/providers/nntp/: camel-nntp-folder.c  camel-nntp-summary.c
src/camel/providers/pop3/: camel-pop3-folder.c
src/camel/providers/smtp/: camel-smtp-transport.c
src/camel/tests/: CMakeLists.txt
src/libedataserverui/: CMakeLists.txt  e-credentials-prompter.c  e-trust-prompt.c  e-webdav-discover-widget.c
src/vala/: CMakeLists.txt
